<resources>
    <string name="app_name">Show Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arriving_today">Arriving Today</string>
    <string name="movies">Movies</string>

    <string name="api_key">f687013245cc1386305a52890b31e484</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="trending_daily">Trending Daily</string>

    <string name="movies_banner">movies_banner</string>
    <string name="movies_arriving_today">movies_arriving_today</string>
    <string name="movies_popular">movies_popular</string>
    <string name="movies_trending_daily">movies_trending_daily</string>
    <string name="movies_trending_weekly">movies_trending_weekly</string>

    <string name="tv_banner">tv_banner</string>
    <string name="tv_arriving_today">tv_arriving_today</string>
    <string name="tv_popular">tv_popular</string>
    <string name="tv_trending_daily">tv_trending_daily</string>
    <string name="tv_trending_weekly">tv_trending_weekly</string>

    <string name="related_movies">Related Movies</string>
    <string name="related_tv">Related TV Shows</string>
    <string name="more_details">More Details</string>


    <string name="coming_soon">Coming Soon</string>
    <string name="whoops">Whoops</string>
    <string name="slow_or_no_internet">Slow or no internet connection.\nPlease check your internet settings</string>
    <string name="pull_down_to_refresh">Pull down to refresh the screen</string>
    <string name="tv">TV</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="genres">Genres</string>
    <string name="director">Director</string>
    <string name="languages">Languages</string>
    <string name="no_of_episodes">No of Episodes</string>
    <string name="no_of_seasons">No of Seasons</string>
    <string name="release_date">Release Date</string>
    <string name="you_might_like">You Might Like</string>
</resources>